[metadata]
name = project_template
version = 0.0.1
description = 'Fit PADs to sin^n function'
long_description = file: README.md 
url='https://github.com/adgreeley/sin_pads'
author='A. Greeley'
author_email='ashley.greeley@nasa.gov'
long_description_content_type = text/markdown
keywords = Python, package, template, data science
python_requires='>=3.0'
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
# The packages required for a general users. Here we don't want to pin down the exact
# version to avoid dependency hell.
install_requires = 
    matplotlib